--- a/index.html
+++ b/index.html
@@ -1,5 +1,514 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/normalize.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" type="image/png" href="img/fav.ico.png"/>
+<link rel="shortcut icon" type="image/png" href="img/fav.png"/>
+ <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+ <!-- custom styles -->
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+
+    <title>Filikong Tale</title>
+</head>
 <body>
-  <h1>test test test</h1>
+
+    <!--_______ HEAD NAV ______ ----------->
+
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top" id="navbar">
+      <div class="container-fluid">
+        <a href="#" class="navbar-brand"><i class="fas fa-comment"></i><span id="fk">filikong</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a href="#slides" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#gallery" class="nav-link">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a href="#blog" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="#connect" class="nav-link">Connect</a>
+            </li>
+          </ul>
+        </div> <!-- navbar -->
+      </div> <!--container fluid-->
+    </nav>
+
+
+  <!--_______ CAROUSEL ______ ----------->
+  <div id="slides" class="carousel" data-ride="carousel">
+    <ul class="carousel-indicators">
+      <li class="active"data-target="#slides" data-slide-to="0"></li>
+      <li data-target="#slides" data-slide-to="1"></li>
+      <li data-target="#slides" data-slide-to="2"></li>
+    </ul>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/background3.jpg" alt="">
+        <div class="carousel-caption">
+          <h1 class="display-2 slide-1">Filikong Tale</h1>
+          <h3>for my dear...</h3>
+        </div> <!-- caption -->
+      </div><!-- item -->
+      <div class="carousel-item">
+        <img src="img/background2.jpg" alt="">
+        <div class="carousel-caption">
+          <h1 class="display-2">Filikong Tale</h1>
+        </div> <!-- caption -->
+      </div> <!-- item -->
+      <div class="carousel-item">
+        <img src="img/background1.png" alt="">
+        <div class="carousel-caption">
+          <h1 class="display-2">Filikong Tale</h1>
+        </div> <!-- caption -->
+      </div> <!-- item -->
+    </div> <!--inner -->
+  </div> <!-- carousel-->
+
+
+
+
+<!--_______ 2 col sec ______ ---------->
+<div class="container about" id="about">
+    <div class="row">
+        <div class="col-sm-7 col-md-6 offset-md-1"><br>
+          <h2>How it all started...</h2>
+          <p>Lorem ipsum. Duis aute irure doat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laboru. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi autem tenetur officia sunt velit ipsum aspernatur, possimus neque voluptas! Cum quod accusamus commodi atque dolores odit error suscipit, quibusdam tempora.</p>
+          <br>
+        </div> <!-- col -->
+
+          <br>
+          <br>
+            <div class="col-sm-5 col-md-4">
+              <img class="img-fluid about-img" src="img/about.jpg" alt="">
+            </div> <!--col-->
+    </div>   <!--row -->
+</div> <!--container-->
+
+<!--_______ JUMBOTRON w/ parallax______ ----------->
+<div class="container-fluid">
+  <div class="row jumbotron parallax">
+    <div class="col-md-8 offset-md-2">
+      <p class="lead">&quot;To love or have loved, that is enough. Ask nothing further. There is no other pearl to be found in the dark folds of life.&quot;</p>
+      <cite>&mdash;Victor Hugo</cite>
+    </div> <!-- col -->
+  </div> <!-- jumbo -->
+</div> <!-- container -->
+
+
+<!--_______  hidden emojis ______ ----------->
+<button class="fun" data-toggle="collapse" data-target="#emoji" id="gallery">
+  click for fun
+</button>
+<div class="collapse" id="emoji">
+  <div class="container-fluid">
+    <div class="row text-center">
+      <div class="col-sm-6 col-md-3">
+        <img class="gif" src="img/gif/panda.gif" alt="">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img class="gif" src="img/gif/poo.gif" alt="">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img class="gif" src="img/gif/unicorn.gif" alt="">
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <img class="gif" src="img/gif/chicken.gif" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!--_______   Gallery ______ ----------->
+<div class="container gallery">
+    <!-- Grid row -->
+<h2 class="text-center">GALLERY</h2><br><br>
+<div class="row">
+
+    <!-- Grid column1 -->
+    <div class="col-lg-4 col-md-12 mb-4">
+
+        <!--Modal: Name-->
+        <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+
+                <!--Content-->
+                <div class="modal-content">
+
+                    <!--Body-->
+                    <div class="modal-body mb-0 p-0">
+
+                        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                            <img class="embed-responsive-item" src="img/gallery1.jpg" allowfullscreen></img>
+                        </div>
+
+                    </div>
+
+                    <!--Footer-->
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+                <!--/.Content-->
+
+            </div>
+        </div>
+        <!--Modal: Name-->
+
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery1.jpg" alt="video" data-toggle="modal" data-target="#modal1"></a>
+    </div>
+
+
+    <!-- Grid column2 -->
+    <div class="col-lg-4 col-md-6 mb-4">
+
+        <!--Modal: Name-->
+        <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+
+                <!--Content-->
+                <div class="modal-content">
+
+                    <!--Body-->
+                    <div class="modal-body mb-0 p-0">
+
+                        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                            <img class="embed-responsive-item" src="img/gallery2.jpg" allowfullscreen></img>
+                        </div>
+
+                    </div>
+
+                    <!--Footer-->
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+                <!--/.Content-->
+
+            </div>
+        </div>
+        <!--Modal: Name-->
+
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery2.jpg" alt="video" data-toggle="modal" data-target="#modal2"></a>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column3 -->
+    <div class="col-lg-4 col-md-6 mb-4">
+
+        <!--Modal: Name-->
+        <div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+
+                <!--Content-->
+                <div class="modal-content">
+
+                    <!--Body-->
+                    <div class="modal-body mb-0 p-0">
+
+                        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                            <img class="embed-responsive-item" src="img/gallery3.jpg" allowfullscreen></img>
+                        </div>
+
+                    </div>
+
+                    <!--Footer-->
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+                <!--/.Content-->
+
+            </div>
+        </div>
+        <!--Modal: Name-->
+
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery3.jpg" alt="video" data-toggle="modal" data-target="#modal3"></a>
+
+    </div>
+    <!-- Grid column -->
+
+</div>
+<!-- Grid row -->
+
+<!-- Grid row -->
+<div class="row">
+
+    <!-- Grid column4 -->
+    <div class="col-lg-4 col-md-12 mb-4">
+
+        <!--Modal: Name-->
+        <div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+
+                <!--Content-->
+                <div class="modal-content">
+
+                    <!--Body-->
+                    <div class="modal-body mb-0 p-0">
+
+                        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                            <img class="embed-responsive-item" src="img/gallery4.jpg" allowfullscreen></img>
+                        </div>
+
+                    </div>
+
+                    <!--Footer-->
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+                <!--/.Content-->
+
+            </div>
+        </div>
+        <!--Modal: Name-->
+
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery4.jpg" alt="video" data-toggle="modal" data-target="#modal4"></a>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column 5-->
+    <div class="col-lg-4 col-md-6 mb-4">
+
+        <!--Modal: Name-->
+        <div class="modal fade" id="modal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+
+                <!--Content-->
+                <div class="modal-content">
+
+                    <!--Body-->
+                    <div class="modal-body mb-0 p-0">
+
+                        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                            <img class="embed-responsive-item" src="img/gallery5.jpg" allowfullscreen></img>
+                        </div>
+
+                    </div>
+
+                    <!--Footer-->
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+                <!--/.Content-->
+
+            </div>
+        </div>
+        <!--Modal: Name-->
+
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery5.jpg" alt="video" data-toggle="modal" data-target="#modal5"></a>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column 6-->
+    <div class="col-lg-4 col-md-6 mb-4">
+
+        <!--Modal: Name-->
+        <div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+
+                <!--Content-->
+                <div class="modal-content">
+
+                    <!--Body-->
+                    <div class="modal-body mb-0 p-0">
+
+                        <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                            <img class="embed-responsive-item" src="img/gallery6.jpg" allowfullscreen></img>
+                        </div>
+
+                    </div>
+
+                    <!--Footer-->
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+                <!--/.Content-->
+
+            </div>
+        </div>
+        <!--Modal: Name-->
+
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery6.jpg" alt="video" data-toggle="modal" data-target="#modal6"></a>
+
+    </div>
+    <!-- Grid column -->
+
+</div>
+<!-- Grid row -->
+</div>
+<!--_______ JUMBOTRON w/ parallax______ ----------->
+<div class="container-fluid">
+  <div class="row jumbotron parallax">
+    <div class="col-md-8 offset-md-2">
+      <p class="lead">&quot;In life its not where you go, its who you travel with.&quot;</p>
+        <cite id="blog">&mdash;Charles Schulz</cite>
+    </div> <!-- col -->
+  </div> <!-- jumbo -->
+</div> <!-- container -->
+
+
+<!--_______ BLOG ______ ----------->
+<!-- <div class="container-fluid blog">
+  <div class="row">
+    <div class="col-lg-6">
+      <h2>Blog</h2>
+      <p>Lorem ipsum. Duis aute irure doat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Lorem ipsum dolor si rehenderit in volu eu fugix doloremque.</p>
+      <br>
+    </div>
+    <div class="col-lg-6">
+      <img class="img-fluid" src="img/bootstrap2.png" alt=""
+    </div>
+  </div>
+</div>
+<hr class="my-4"> -->
+
+<div class="container">
+<div class="row">
+<h2 id="b">BLOG</h2>
+    <div class="blog">
+        <div class="col-12">
+        		<img class="blog-img img-fluid" src="http://placekitten.com/150/150">
+        </div>
+        <div class="col-12">
+          	<div class="blog-body">
+            	<h4 class="text-left blog-heading">Title 1</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
+                Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
+                dolor, n sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
+                Aliquam in felis sit amet augue.</p>
+                <p class="text-right" id="connect">By Kevin</p>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+
+<!--_______ 2 col sec ______ ----------->
+<div class="container-fluid connect">
+  <div class="row text-center cards">
+    <div class="col-12">
+      <h2>CONNECT WITH US</h2>
+    </div>
+    <div class="offset-lg-2 col-lg-4 col-sm-6 col-xs-12 social padding">
+      <div class="card">
+        <img src="img/dpkevin.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <h4 class="card-title">Kevin Carl David</h4>
+          <p class="card-text">lorem ipsum monkey card dog orange</p>
+        </div>
+        <div class="card-links">
+            <a href="https://www.facebook.com/kevincarldavid123"  target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+            <a href="https://www.instagram.com/kevincarldavid/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-sm-6 col-xs-12 padding">
+      <div class="card">
+        <img src="img/dpcindy2.jpg" alt="" class="card-img-top img-fluid">
+        <div class="card-body">
+          <h4 class="card-title">Sin Ting Cindy Chan</h4>
+          <p class="card-text">lorem ipsum monkey card dog orange</p>
+        </div>
+        <div class="card-links">
+            <a href="https://www.facebook.com/kevincarldavid123" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+            <a href="https://www.instagram.com/cindystc/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--_______ PS1 ______ ----------->
+<div class="container-fluid">
+  <div class="row welcome text-center">
+    <div class="col-12">
+        <h4>Built with purpose.
+        </h4><hr class="my-3">
+        <p class="lead">I built this website originally as a practice to become
+            a front-end web developer. As you can see, the theme of this website
+            is about my stunning girlfriend and myself. Clearly it has
+        been built to get some 'good' points as well ;). I used the following technologies: </p>
+    </div>
+  </div>
+</div>
+
+<!-- PS2 -->
+<div class="container-fluid">
+  <div class="row tech">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <i class="fas fa-code"></i>
+      <h3>HTML5</h3>
+      <p>Built with the latest version of HTML, HTML5</p>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <i class="fas fa-bold"></i>
+      <h3>Bootstrap</h3>
+      <p>Built with the latest version of Bootstrap, Bootstrap 4</p>
+    </div>
+    <div class="col-sm-12 col-md-4">
+      <i class="fab fa-css3"></i>
+      <h3>CSS3</h3>
+      <p>Built with the latest version of CSS, CSS3</p>
+    </div>
+  </div>
+</div>
+
+<!--_______ footer ______ ----------->
+<div class="container-fluid foot">
+  <div class="row text-center">
+    <div class="col-12">
+        <ul class="nav-foot navbar d-flex justify-content-center">
+            <li><a href="#slides">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#connect">Conect</a></li>
+        </ul>
+    </div>
+     <div class="col-12 copy">
+       <hr class="light">
+       <h5>Copyright&copy;2018 Kevin Carl David</h5>
+     </div>
+  </div>
+</div>
+
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
