--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="modal-body mb-0 p-0">
 
                         <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                            <img class="embed-responsive-item" src="img/gallery1.jpg" allowfullscreen></img>
+                            <img class="embed-responsive-item" src="img/gallery1.jpg" allowfullscreen/>
                         </div>
 
                     </div>
@@ -454,8 +454,8 @@
     <div class="col-12">
         <h4>Built with purpose.
         </h4><hr class="my-3">
-        <p class="lead">I built this website originally as a practice to become
-            a front-end web developer. As you can see, the theme of this website
+        <p class="lead">I built this website for the sole purpose of practice to become
+            a junior web developer. As you can see, the theme of this website
             is about my stunning girlfriend and myself. Clearly it has
         been built to get some 'good' points as well ;). I used the following technologies: </p>
     </div>
