--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
         <!--Modal: Name-->
 
-        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery1.jpg" alt="video" data-toggle="modal" data-target="#modal1"></a>
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery1.jpg" alt="photo" data-toggle="modal" data-target="#modal1"></a>
     </div>
 
 
@@ -204,7 +204,7 @@
         </div>
         <!--Modal: Name-->
 
-        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery2.jpg" alt="video" data-toggle="modal" data-target="#modal2"></a>
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery2.jpg" alt="photo" data-toggle="modal" data-target="#modal2"></a>
 
     </div>
     <!-- Grid column -->
@@ -240,7 +240,7 @@
         </div>
         <!--Modal: Name-->
 
-        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery3.jpg" alt="video" data-toggle="modal" data-target="#modal3"></a>
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery3.jpg" alt="photo" data-toggle="modal" data-target="#modal3"></a>
 
     </div>
     <!-- Grid column -->
@@ -282,7 +282,7 @@
         </div>
         <!--Modal: Name-->
 
-        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery4.jpg" alt="video" data-toggle="modal" data-target="#modal4"></a>
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery4.jpg" alt="photo" data-toggle="modal" data-target="#modal4"></a>
 
     </div>
     <!-- Grid column -->
@@ -318,7 +318,7 @@
         </div>
         <!--Modal: Name-->
 
-        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery5.jpg" alt="video" data-toggle="modal" data-target="#modal5"></a>
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery5.jpg" alt="photo" data-toggle="modal" data-target="#modal5"></a>
 
     </div>
     <!-- Grid column -->
@@ -354,7 +354,7 @@
         </div>
         <!--Modal: Name-->
 
-        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery6.jpg" alt="video" data-toggle="modal" data-target="#modal6"></a>
+        <a class="gallery-img"><img class="img-fluid z-depth-1" src="img/gallery6.jpg" alt="photo" data-toggle="modal" data-target="#modal6"></a>
 
     </div>
     <!-- Grid column -->
