--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         <p class="lead">I built this website for the sole purpose of practice to become
             a junior web developer. As you can see, the theme of this website
             is about my stunning girlfriend and myself. Clearly it has
-        been built to get some 'good' points as well ;). I used the following technologies: </p>
+        been built to get some 'good' points as well ;). Note that this website is <strong>still under construction</strong>I used the following technologies: </p>
     </div>
   </div>
 </div>
